Fix bug where marker clusters were not showing on the Map by using CI code as well as Google documentation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ header {
   background-size: cover;
   opacity: 0.75;
   min-height: 360px;
+  max-width: 650px;
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
